begin search controller

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,4 +21,10 @@
       </li>
     </ul>
   </div>
+  <%= form_tag :search, method: :get, class: "form-inline" do %>
+    <div class="form-group search-field">
+      <%= text_field_tag :s, "Search by zipcode" %>
+      <%= submit_tag "Search" %>
+    </div>
+  <% end %>
 </nav>
