--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,1 +1,18 @@
 <h1>Stores within 25 miles of <%= @zipcode %>
+
+<h3> <%= @stores.count %> Total Stores </h3>
+
+<h5> Showing the first 15 results: </h5>
+
+<div class="stores">
+  <% @stores.first(15).each do |store| %>
+    <ul class="store">
+      <h4><%= store.longName %></h4>
+      <li>City: <%= store.city %></li>
+      <li>Distance: <%= store.distance %> miles </li>
+      <li>Phone: <%= store.phone %></li>
+      <li>Store Type: <%= store.storeType %> </li>
+    </ul>
+    <br>
+  <% end %>
+</div>
